Revision history for Mojo-Cache-Role-Strict

{{$NEXT}}

0.03  2019-12-21 16:33:26 CST
        - Added strict_get and strict_set.

0.02  2019-12-04 20:50:47 CST
        - Added Test::Pod to test prereqs.

0.01  2019-12-04 20:49:11 CST
        - Initial release