@@ -1,36 +1,41 @@
-sudo: false # faster builds as long as you don't need sudo access
+---
+addons:
+  apt:
+    packages:
+      - aspell
+      - aspell-en
 language: perl
 perl:
-  - "5.30"
-  - "5.28"
-  - "5.26"
-  - "5.24"
-  - "5.22"
-  - "5.20"
-  - "5.18"
-  - "5.16"
-  - "5.14"
-  - "5.12"
-  - "5.10"
+  - blead
+  - dev
+  - '5.30'
+  - '5.28'
+  - '5.26'
+  - '5.24'
+  - '5.22'
+  - '5.20'
+  - '5.18'
+  - '5.16'
+  - '5.14'
+cache:
+  directories:
+    - $HOME/perl5
+matrix:
+  allow_failures:
+    - perl: blead
+  fast_finish: 1
+  include:
+    - env: COVERAGE=1
+      perl: '5.30'
+env:
+  global:
+    - AUTHOR_TESTING=1
+    - RELEASE_TESTING=1
 before_install:
-    - git clone git://github.com/haarg/perl-travis-helper
-    - source perl-travis-helper/init
-    - build-perl
-    - perl -V
-    - build-dist
-    - cd $BUILD_DIR
-install:
-    - export RELEASE_TESTING=1 AUTOMATED_TESTING=1 AUTHOR_TESTING=1 HARNESS_OPTIONS=c HARNESS_TIMER=1
-    - cpanm --quiet --notest Devel::Cover::Report::Coveralls
-    - cpanm --quiet --notest --installdeps .
-script:
-    - PERL5OPT=-MDevel::Cover=-coverage,statement,branch,condition,path,subroutine prove -lrsv t
-    - cover
-after_success:
-    - cover -report coveralls
-notifications:
-  email:
-    recipients:
-      - srchulo@cpan.org
-    on_failure: change
-    on_success: change
+  - eval $(curl https://travis-perl.github.io/init) --auto --always-upgrade-modules
+### __app_cisetup__
+# ---
+# force_threaded_perls: 0
+# perl_caching: 1
+
+### __app_cisetup__
